...
    public static var locale: Locale { Locale(identifier: language) }

    public static func nativeName(for language: String) -> String {
        switch language {
        case "fr": "Français"
        case "en": "English"
        case "ru": "Русский"
        case "de": "Deutsch"
        case "es": "Español"
        default: text("Langue de l’iPhone")
        }
    }

...
